# target-jobs-search-AI

./: .dockerignore  .gitignore  .importlinter  AGENTS.md  ARTICLE.md  Dockerfile  FALLBACK_CLI_MCP.md  LICENSE  LOCAL_ADK_WEB_UI.md  README.md  architecture_decisions.md  config.example.json  pyproject.toml
.claude/: settings.json
autopilot_jobhunt/: __init__.py  agent.py  app_paths.py  prompts.py  settings.py  web_app.py
autopilot_jobhunt/config/: __init__.py  loader.py  paths.py  text.py
autopilot_jobhunt/discovery/: __init__.py  fetch.py  location.py  urls.py
autopilot_jobhunt/domain/: __init__.py  models.py
autopilot_jobhunt/export/: __init__.py  artifacts.py  csv.py  pdf.py
autopilot_jobhunt/llm/: __init__.py  base.py  client.py  factory.py
autopilot_jobhunt/scoring/: __init__.py  scorer.py
autopilot_jobhunt/services/: __init__.py  config_service.py  export_service.py  google_adk_service.py  llm_factory.py  llm_provider_base.py  nvidia_adk_service.py  ollama_adk_service.py  pdf_utils.py  scan_service.py  score_service.py  session_files.py  session_runtime.py  tailor_service.py  tailoring_skill.py
autopilot_jobhunt/storage/: __init__.py  scan_state.py  session_files.py  session_state.py
autopilot_jobhunt/tailoring/: __init__.py  drafter.py  skill.py
autopilot_jobhunt/tools/: __init__.py  formatting.py  job_tools.py
job_hunt/: config_utils.py  drafter.py  llm_utils.py  log.py  main.py  mcp_server.py  scanner.py  tools.py
job_hunt/data/: config.example.json  env_example
tests/: test_agent_architecture.py  test_app_paths.py  test_config_sanitizing.py  test_evaluator_status.py  test_job_tools.py  test_llm_factory.py  test_pdf_utils.py  test_scanner.py  test_scorer.py  test_session_files.py  test_session_runtime.py  test_smoke_imports.py  test_tailoring_drafter.py
(+11 files in other folders)
